2010-12-30 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-id.c (na_object_id_prepare_for_paste):
	Set data provider to NULL when duplicating a desktop file item.

2010-12-29 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-selected-info.c:
	* src/core/na-selected-info.h:
	No more keep GFile location nor NAGnomeVFSURI parsed URI.
	(na_selected_info_get_location): Removed function.
	(na_selected_info_get_uri_host, na_selected_info_get_uri_user,
	na_selected_info_get_uri_port): New functions.

	* src/core/na-tokens.c (na_tokens_new_from_selection):
	Make use of new na_selected_info functions.
	Quote the filename elements.
	Fix #638278.

	* src/core/na-tokens.c (build_string_lists):
	Keep the same order than Nautilus. Fix #638272.

	* src/core/na-selected-info.c (new_from_nautilus_file_info):
	* src/plugin-menu/nautilus-actions.c (menu_provider_get_file_items):
	Add debug messages to trace order and names in the selection.

	* src/plugin-menu/nautilus-module.c (set_log_handler):
	Remove obsolete TODO.

2010-12-26 Pierre Wieser <pwieser@trychlos.org>

	* src/core/Makefile.am:
	Add -fPIC parameter
	Get ride of 'relocation R_X86_64_32 against .rodata.str1.8' message.

2010-12-22 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/Makefile.am:
	* src/io-gconf/Makefile.am:
	* src/io-xml/Makefile.am:
	Also compile dynamic plugins with needed dependancies
	(get ride of #637797 when loaded from PcManFm)

	* src/nact/egg-sm-client-private.h:
	* src/nact/egg-sm-client-xsmp.c:
	Apply Mathias Clasen patch to build against Gtk+ 2.91.7.

	* doc/reference/Makefile.am: include auto created files in
	content_files, so that they are build before XML generation.

	* Makefile.am: Enable '-Wl,--as-needed' link option at make distcheck.

	* configure.ac:
	* m4/na-compiler-flags.m4: Define --enable-as-needed configure option.

	* src/core/Makefile.am: Build core library against its dependancies.
	Fix #637797 - -Wl,--as-needed bug.
