@@ -1,7 +1,11 @@
 2010-12-30 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-icontext.c (na_icontext_read_done):
+	Convert 'all/allfiles' mimetype to 'all/all' + 'file' scheme.
+
 	* src/core/na-object-id.c (na_object_id_prepare_for_paste):
 	Set data provider to NULL when duplicating a desktop file item.
+	This fixed the 'unable to save a copied item' bug.
 
 2010-12-29 Pierre Wieser <pwieser@trychlos.org>
 
